--- a/css/style.css
+++ b/css/style.css
@@ -231,3 +231,308 @@ footer p a:focus {
 
 
 
+/******************************* contact.html ***********************************/
+
+/******************************* header ****************************************/
+
+.wrapper-header {
+    background-color: #de8e15;
+    border-bottom: 2px solid #0b1752;
+    height: 100px;
+}
+
+
+/******************************* header logo ************************************/
+
+.logo {
+    height: 100px;
+    position: relative;
+}
+
+.logo img {
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    object-fit: contain;
+    bottom: -80px;
+    z-index: 1;
+    padding-left: 45px;
+
+}
+
+
+/***** changing size and position for each screen   *****/
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .logo img {
+        position: absolute;
+        width: 150px;
+        height: 150px;
+        object-fit: contain;
+        bottom: -70px;
+        z-index: 1;
+        padding-left: 15px;
+    }
+
+}
+
+@media (min-width: 992px) {
+    .logo img {
+
+        position: absolute;
+        width: 200px;
+        height: 200px;
+        object-fit: contain;
+        bottom: -100px;
+        z-index: 1;
+        padding-left: 40px;
+    }
+}
+
+
+/******************************* navigation bar ************************************/
+
+.bg-nav {
+    min-height: 100px;
+
+}
+
+.navbar-default {
+    background-color: transparent;
+    border: none;
+}
+
+/******************************* hamburger button ************************************/
+
+.navbar-default .navbar-toggle,
+.navbar-default .navbar-toggle:focus,.navbar-default .navbar-toggle:hover {
+    border-color: transparent;
+    background-color: transparent;
+    margin-top: 25px;
+
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: #fff;
+    width: 40px;
+    height: 6px;
+    margin-bottom: 6px;
+}
+
+
+
+nav ul li .page {
+    white-space: nowrap;
+    /*** no wrap to the next line **/
+    
+
+
+}
+
+.navbar-default .navbar-nav>li>a {
+    color: #fff;
+    font-size: 18px;
+    font-family: 'Bangers', sans-serif;
+    letter-spacing: 3px;
+    font-size: 18px;
+
+
+}
+
+
+.navbar-default .navbar-nav>li>a:focus,
+.navbar-default .navbar-nav>li>a:hover,
+.navbar-default .navbar-nav>.active>a,
+.navbar-default .navbar-nav>.active>a:focus,
+.navbar-default .navbar-nav>.active>a:hover {
+    color: #0b1752;
+    background-color: transparent;
+}
+
+
+nav ul li {
+    background-color: #de8e15;
+    border-bottom: 1px solid #0b1752;
+    border-right: 1px solid #0b1752;
+    border-left: 1px solid #0b1752;
+    padding-bottom: 10px;
+    padding-top: 10px;
+
+}
+
+.btn-success {
+    color: #fff;
+    background-color: #de8e15;
+    border-color: transparent;
+}
+
+.nav>li>a:hover {
+    color: #fff;
+    background-color: #de8e15;
+    border-color: transparent;
+
+}
+
+.btn-success.active,
+.btn-success:active,
+.open>.dropdown-toggle.btn-success {
+    color: #fff;
+    border: none;
+}
+
+
+.navbar-collapse {
+    text-align: center;
+    margin-right: 0px;
+    margin-top: 3px;
+    border: 0px solid transparent;
+    box-shadow: none;
+}
+
+
+/******************************* media queries for bigger screens ************************************/
+
+
+@media (min-width: 768px) {
+    .navbar-nav {
+        float: none;
+        width: 100%;
+        margin: 0 auto;
+    }
+
+
+    .navbar-collapse.collapse {
+        height: 100px;
+        margin-top: 0px;
+        
+    }
+
+    .navbar-nav>.nav-item-menu>a {
+        padding-top: 20px;
+    }
+
+    .navbar-nav>.subscribe>a {
+        padding-top: 10px;
+    }
+
+    .nav-item {
+        width: 20%;
+        height: 100%;
+        text-align: center;
+        line-height: 100px;
+    }
+
+    .nav>li>a {
+        display: inline-block;
+    }
+
+    .navbar-default .navbar-nav>.active>a,
+    .navbar-default .navbar-nav>.active>a:focus,
+    .navbar-default .navbar-nav>.active>a:hover {
+        background-color: transparent;
+        color: #0b1752;
+    }
+
+    .navbar-default .navbar-nav>li>a:focus,
+    .navbar-default .navbar-nav>li>a:hover {
+        color: #0b1752;
+        background-color: transparent;
+    }
+
+    .navbar-default .navbar-nav>li>a {
+        color: #fff;
+    }
+
+    .navbar-nav>li>a {
+        height: 100px;
+    }
+
+
+    .collapse ul .subscribe .btn {
+        height: 45px;
+        width: 100%;
+        border-radius: 20px;
+    }
+    
+    
+
+    .navbar-default .navbar-nav>.subscribe>a:focus,
+    .navbar-default .navbar-nav>.subscribe>a:hover {
+        color: #fff;
+        background-color: #449c44;
+    }
+
+    nav ul li i {
+        display: block;
+        padding-bottom: 15px
+    }
+
+
+    nav ul li .page {
+        display: block;
+       
+
+    }
+
+    nav ul li {
+        background-color: transparent;
+        border: none;
+    }
+
+    .btn-success {
+        color: #fff;
+        background-color: #ff8a00;
+        box-shadow: 1px 2px 4px 0px #0b1752;
+    }
+
+    .btn-success.active,
+    .btn-success:active,
+    .open>.dropdown-toggle.btn-success,
+    .navbar-default .navbar-nav>.subscribe>a:focus,
+    .navbar-default .navbar-nav>.subscribe>a:hover {
+
+        color: #fff;
+        background-color: #ffae00;
+        box-shadow: 1px 2px 4px 0px #0b1752;
+    }
+
+    .btn-success.focus,
+    .btn-success:focus {
+
+        border-color: transparent;
+    }
+
+}
+
+
+
+/****************FOOTER*******************/
+
+
+
+.bg-all-footer{
+    background-color: #86a875;
+    height: 100%;
+}
+
+
+
+
+/*************Social media***************/
+
+
+
+/****************SECTION contact.html***********/
+
+.bg-contact{
+    background-color: #efefef;
+    height: 100%;
+
+}
+
+
+.c-details{
+   
+}
+
+
