--- a/css/style.css
+++ b/css/style.css
@@ -7,14 +7,29 @@
 html,
 body {
     height: 100%;
+    /*width: 100%;*/
     background-color: white;
     padding: 0px;
-    border: 0px;
+    margin: 0px;
+    overflow-x: hidden;
+
 
 }
 
+
+
 .uppercase {
     text-transform: uppercase;
+}
+
+
+p,
+h1,
+h2,
+h3,
+h4 {
+    margin: 0px;
+    padding: 0px;
 }
 
 
@@ -61,7 +76,7 @@ header {
     overflow: hidden;
 }
 
-section,
+
 .carousel,
 .item,
 .active {
@@ -229,21 +244,21 @@ footer p a:focus {
 
 
 
-/******************************* contact.html ***********************************/
+/*******************************band.html, contact.html, listen.html, news.html ***********************************/
 
 /******************************* header ****************************************/
 
 .wrapper-header {
     background-color: #de8e15;
     border-bottom: 2px solid #0b1752;
-    height: 120px;
+    height: 90px;
 }
 
 
 /******************************* header logo ************************************/
 
 .logo {
-    height: 120px;
+    height: 90px;
     position: relative;
 }
 
@@ -291,7 +306,7 @@ footer p a:focus {
 /******************************* navigation bar ************************************/
 
 .bg-nav {
-    min-height: 100px;
+    min-height: 90px;
 
 }
 
@@ -382,9 +397,12 @@ nav ul li {
 
 
 .navbar-collapse {
+    position: relative;
+    top: -7px;
     text-align: center;
     margin-right: 0px;
-    margin-top: 3px;
+    margin-top: -5px;
+    width: 100%;
     border: 0px solid transparent;
     box-shadow: none;
 }
@@ -401,13 +419,13 @@ nav ul li {
 
 
     .navbar-collapse.collapse {
-        height: 100px;
+        height: 90px;
         margin-top: 0px;
 
     }
 
     .navbar-nav>.nav-item-menu>a {
-        padding-top: 20px;
+        padding-top: 15px;
     }
 
     .navbar-nav>.subscribe>a {
@@ -424,7 +442,7 @@ nav ul li {
         width: 20%;
         height: 100%;
         text-align: center;
-        line-height: 100px;
+        line-height: 90px;
     }
 
     .nav>li>a {
@@ -449,16 +467,16 @@ nav ul li {
     }
 
     .navbar-nav>li>a {
-        height: 100px;
+        height: 90px;
     }
 
 
     .collapse ul .subscribe .btn {
         padding-top: 10px;
-        height: 50px;
+        height: 45px;
         width: 160px;
         border-radius: 20px;
-        margin-bottom: 5px;
+        margin-bottom: 20px;
     }
 
 
@@ -471,7 +489,7 @@ nav ul li {
 
     nav ul li i {
         display: block;
-        padding-bottom: 15px
+        padding-bottom: 10px
     }
 
 
@@ -530,30 +548,39 @@ nav ul li {
 
 
 
+/****************SECTION contact.html***********/
 
+.bg-contact {
+    background-color: yellow;
+    /*height: 100%;*/
+}
 
-
+/****************SECTION band.html***********/
 
 /****************FOOTER*******************/
 
 .bg-all-footer {
     background-color: #86a875;
-    height: 100%;
     color: #fdfdfd;
     border-top: 2px solid #0b1752;
+
 }
 
+
+
+
 footer h5 {
+    margin-top: 3px;
     font-family: 'Bangers', sans-serif;
-    margin-bottom: 25px;
+    margin-bottom: 8px;
     letter-spacing: 3px;
-    font-size: 18px
+    font-size: 15px
 }
 
 .bg-contactus {
     padding-left: 30px;
-    padding-top: 8px;
-    padding-bottom: 8px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 
@@ -581,7 +608,7 @@ footer h5 {
 @media (min-width: 768px) {
     footer h5 {
         font-size: 20px;
-}
+    }
 }
 
 
@@ -593,8 +620,8 @@ footer h5 {
 
 .bg-social {
     padding-right: 30px;
-    padding-top: 8px;
-    padding-bottom: 8px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 
@@ -700,10 +727,139 @@ footer h5 {
 }
 
 
-/****************SECTION contact.html***********/
 
-.bg-contact {
-    background-color: #fefefe;
-    height: 100%;
+
+
+
+.header-content {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    height: 90px;
+    right: 0px;
+    overflow: visible;
+    z-index: 2;
+}
+
+
+.bg-section {
+    position: absolute;
+    bottom: 90px;
+    top: 90px;
+    left: 0px;
+    right: 0px;
+    overflow: auto;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    height: 90px;
+    right: 0px;
+    overflow: hidden;
+}
+
+
+
+
+/*****section styled*******/
+
+.bandimage,
+.bandimage2 {
+    text-align: center;
+}
+
+.textband {
+    margin-top: 35px;
+}
+
+.wrapper-section {
+    margin: 20px 25px;
+}
+
+
+
+
+.page-title {
+    font-family: "Bangers", sans-serif;
+    margin-bottom: 45px;
+}
+
+
+.page-subtitle {
+    font-family: "Bangers", sans-serif;
+    margin-bottom: 35px;
+    margin-left: 16px;
+}
+
+
+
+.band-img-text-row {
+    width: 100%;
+}
+
+
+
+.textband {
+    margin-bottom: 60px;
+}
+
+
+
+
+.member-image img {
+    box-shadow: 3px 2px 5px 1px grey;
+}
+
+.member-image {
+    margin-bottom: 25px;
+}
+
+
+
+.member-text p {
+
+    margin-bottom: 10px;
+}
+
+
+.member-info div div h3 {
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+
+@media (min-width: 768px) {
+
+    .wrapper-section {
+        margin: 60px 100px;
+    }
+
+
+    .bandimage {
+        float: right;
+        margin: 0px 0px 50px 80px;
+    }
+
+    .bandimage2 {
+        float: left;
+        margin: 0px 80px 50px 0px;
+    }
+
+
+
+    .member-info {
+        padding: 0px 15px 15px 15px;
+    }
+
+    .textband {
+        margin-top: 0px;
+    }
+
+   
+
 
 }
+
+
