--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Bangers');
+@import url('https://fonts.googleapis.com/css?family=Bangers|Montserrat:400,500|Roboto:400');
 
 
 
@@ -12,6 +12,9 @@ body {
     padding: 0px;
     margin: 0px;
     overflow-x: hidden;
+    font-family: 'Roboto', sans-serif;
+    font-weight:400;
+    font-size:18px;
 
 
 }
@@ -114,7 +117,7 @@ header {
 
 
 /* These three overlay are in case I want to use a different overlay for each picture*/
-
+/*
 .overlay1 {
     background-color: rgba(229, 211, 160, 0.3);
 }
@@ -127,7 +130,7 @@ header {
     background-color: rgba(229, 211, 160, 0.3);
 }
 
-
+*/
 .carousel-indicators {
     margin-bottom: 20px;
 
@@ -828,6 +831,10 @@ footer h5 {
     font-family: "Bangers", sans-serif;
     margin-bottom: 35px;
     margin-left: 16px;
+    font-size: 32px;
+    color:#555555;
+
+    
 }
 
 
@@ -995,7 +1002,7 @@ footer h5 {
 
 .music-column {
    
-    padding: 25px 50px;
+    padding: 25px 20px;
 
 }
 
@@ -1004,6 +1011,7 @@ footer h5 {
     width: 100%;
     height: 100%;
     padding: 50px 0px;
+    margin: 0 auto;
 
 }
 
@@ -1013,22 +1021,16 @@ footer h5 {
 .album {
     position: relative;
     top: 3em;
-    width: 10em;
-    height: 10em;
+    width: 150px;
+    height: 150px;
     margin-bottom: 4%;
+    padding:20px;
 }
 
 
 
-.player {
-    position: relative;
-    width: auto;
-    min-height: 20em;
-    overflow: hidden;
-    background-color: transparent;
-    border-radius: 0.25em;
-    box-shadow: none;
-}
+
+
 
 audio {
     width: 100%;
@@ -1036,6 +1038,8 @@ audio {
 
 
 }
+
+
 
 .audio-mp3 {
     margin: 0 auto;
@@ -1046,28 +1050,74 @@ audio {
     text-align: center;
     margin-top: 25px;
 }
-.share-link{
+
+.buy-download-share{
     text-align: center;
 }
 
-.share-link i{
-    margin: 15px;
-    font-size: 30px;
+.buy-download-share a i{
+    padding-left:15px;
+    font-size: 25px;
+    color:#1c5821;
+     transition: all .3s ease-in-out;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    
 }
 
 
-
-.buy-download{
-   text-align: center; 
+.buy-download-share a i:hover{
+   
+    color:#ff7800;
+    
 }
 
-.buy-download i{
-    margin-top: 10px;
-  font-size: 25px;  
+.lyrics{
+    padding-top:15px;
+}
+
+.fa-download{
+    padding-top:25px;
+}
+
+.share-buy{
+    padding:25px;
+}
+
+.share-buy a i{
+        font-size: 35px;
+        letter-spacing:30px;
+
 }
 
 .wrapper-song{
     margin-bottom: 60px;
 }
 
-/**** add hover and transitions ****/
+.lyrics p{
+    vertical-align: middle;
+}
+
+
+.cover div {
+ 
+  width: 80px;
+  height: 80px;
+
+    
+}
+
+.cover img:hover {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+-webkit-transform-origin: 0 0;
+          transform-origin: 0 0;
+  -webkit-transform: rotate(0) translate(-50%,-50%);
+          transform: rotate(0) translate(-50%,-50%);
+  -webkit-animation: spin 4s linear infinite paused;
+          animation: spin 4s linear infinite ;
+}
